# market-making

./: .env.example  .gitignore  CIRCUIT_BREAKER_IMPLEMENTATION.md  Cargo.toml  README.md  build_output.txt  risk-reduction-tests.txt  test_mexc_order.rs  to-do.txt
.claude/: settings.local.json
.github/workflows/: live-tests.yml
config/: avellaneda_stoikov.toml
crates/adapters/: Cargo.toml  traits.rs
crates/adapters/src/: lib.rs  traits.rs
crates/adapters/src/binance_us/: account.rs  mod.rs  spot.rs
crates/adapters/src/bitget/: account.rs  mod.rs  perps.rs  spot.rs
crates/adapters/src/bybit/: account.rs  mod.rs  perps.rs  spot.rs
crates/adapters/src/gateio/: account.rs  mod.rs  perps.rs  spot.rs
crates/adapters/src/kalshi/: account.rs  mod.rs  perps.rs  spot.rs
crates/adapters/src/kraken/: account.rs  common.rs  mod.rs  perps.rs  perps_rest.rs  perps_ws.rs  spot.rs  spot_rest.rs  spot_ws.rs
crates/adapters/src/kucoin/: account.rs  mod.rs  perps.rs  spot.rs
crates/adapters/src/mexc/: account.rs  common.rs  mod.rs  perps.rs  perps_rest.rs  perps_ws.rs  spot.rs  spot_rest.rs  spot_ws.rs
crates/adapters/src/okx/: account.rs  mod.rs  perps.rs  spot.rs
crates/adapters/src/utils/: circuit_breaker.rs  heartbeat.rs  mod.rs  rate_limiter.rs  reconnect.rs  ws_manager.rs
crates/adapters/tests/: kraken_live.rs  kraken_schema.rs  live_connectivity.rs  load_tests.rs  mexc_cancel_all_orders.rs  mexc_kill_switch_test.rs  mexc_live.rs  mexc_order_diagnostic.rs  mexc_p99_latency_test.rs  mexc_subscribe_schema.rs  mexc_websocket_reconnection_test.rs  oms_integration.rs  reconnect.rs  risk_oms_integration.rs  serde_fixtures.rs  websocket_reconnection_test.rs
crates/adapters/tests/fixtures/: kraken_ticker.json  kraken_ws_order.json  mexc_trade.json
crates/hedge/: Cargo.toml
crates/inventory/: Cargo.toml
crates/inventory/src/: lib.rs  position_manager.rs
crates/oms/: Cargo.toml
crates/oms/src/: event_processor.rs  lib.rs  manager.rs  order_book.rs  order_router.rs  paper_trading.rs  persistence_handle.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 20241120000000_initial_schema.sql
crates/persistence/src/: database.rs  lib.rs  models.rs  schema.rs
crates/persistence/src/repositories/: fills.rs  mod.rs  orders.rs  positions.rs  risk_events.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  config.rs  events.rs  kill_switch.rs  latency_tracker.rs  lib.rs  limits.rs  margin.rs  monitor.rs  monitoring.rs  portfolio.rs  pre_trade.rs  rate_limit.rs  types.rs
crates/risk/tests/: kill_switch_test.rs  p99_latency_test.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: avellaneda_stoikov.rs  config.rs  lib.rs  metrics.rs
demo/: Cargo.toml  README.md
demo/examples/: circuit_breaker_demo.rs
examples/: kraken_reconnect_demo.rs  mexc_reconnect_demo.rs  test_kraken_connection.rs  test_kraken_raw.rs
