[package]
name = "market-making"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/models",
    "crates/adapters",
    "crates/oms",
    "crates/risk",
]

[[example]]
name = "test_kraken_raw"
path = "examples/test_kraken_raw.rs"

[[example]]
name = "test_kraken_connection"
path = "examples/test_kraken_connection.rs"

[[example]]
name = "kraken_reconnect_demo"
path = "examples/kraken_reconnect_demo.rs"

[dependencies]
adapters = { path = "crates/adapters" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1.89"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Crypto
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Utils
url = "2.5"
serde_urlencoded = "0.7"
rust_decimal = "1.37"

