[package]
name = "market-making-demo"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "circuit_breaker_demo"
path = "examples/circuit_breaker_demo.rs"

[dependencies]
adapters = { path = "../crates/adapters" }
risk = { path = "../crates/risk" }
oms = { path = "../crates/oms" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
