[package]
name = "adapters"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
serde_urlencoded = { workspace = true }
futures-util = { workspace = true }
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
http = "1.0"

# RSA for Kalshi authentication
rsa = { version = "0.9", features = ["sha2"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
oms = { path = "../oms" }
async-trait = { workspace = true }

