[package]
name = "inventory"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

# Local dependencies
adapters = { path = "../adapters" }
oms = { path = "../oms" }

# Inventory-specific
dashmap = "6.1"  # Concurrent HashMap
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
