[package]
name = "oms"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
persistence = ["dep:persistence", "dep:rust_decimal"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Local dependencies
adapters = { path = "../adapters" }

# Optional persistence support
persistence = { path = "../persistence", optional = true }
rust_decimal = { workspace = true, optional = true }

# OMS-specific
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
dashmap = "6.1"  # Concurrent HashMap
