[package]
name = "strategies"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
adapters = { path = "../adapters" }
oms = { path = "../oms" }
inventory = { path = "../inventory" }

tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = "0.8"
